--- a/FInal_Report.Rmd
+++ b/FInal_Report.Rmd
@@ -34,8 +34,18 @@ block_list=1:2:9; % block indices
 SS=length(SS_list); % N Set size
 Nsubj=length(subj_list); % N subjects 
 ```
-Then I read the files by looping the filenames.  
+Besides, in the first version, I was reading datasets by first listing all the files that contain the same pattern in the filenames. Then loading all the files in the list, i.e.,   
+```{matlab, eval=F}
+%% This is the old version
+filename_t1=dir('*t1_mix*.mat');
+filename_t2=dir('*t2_mix*.mat');
+%...%
+load(filename_t1(j).name)
+load(filename_t2(j).name)
+```
+This will lead to problems, given that we cannot perfectly control the order of loading the datafiles in the list. So in this refined version, I read the files by looping the filenames.  
 ```{matlab eval=F}
+%% This is the new version
 for k=block_list % merge blocks
             filename=['E1c_sub',num2str(subj_list(j)),'_',num2str(k+cond2-1),'_t',num2str(cond2),'_mix.mat'];
             load(filename)
@@ -43,6 +53,7 @@ for k=block_list % merge blocks
             search=vertcat(search,search_m);
 end
 ```
+
 
 #### 3. Using `table` to store and manipulate datasets
 ```{matlab eval=FALSE}
